@@ -10,6 +10,9 @@ What's New in Python 3.3.0 Alpha 4?
 Core and Builtins
 -----------------
 
+- Issue #14133 (PEP 415): Implement suppression of __context__ display with an
+  attribute on BaseException. This replaces the original mechanism of PEP 409.
+
 - Issue #14417: Mutating a dict during lookup now restarts the lookup instead
   of raising a RuntimeError (undoes issue #14205).
 
